[tool.poetry]
name = "tone-teller"
version = "0.1.0"
description = ""
authors = ["Stephen Nicholson <stephennicholson14@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tone_teller"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.40.1"
Flask = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
black = "^24.4.2"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
